# RootBridge-Kotlin

./: .gitignore  AGENTS.md  README.md  gradle_out.txt  settings.gradle.kts
.github/workflows/: ci.yml
.planning/: README.md  ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-project-initialization/: 01-01-SUMMARY.md  01-CONTEXT.md  01-PLAN.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
app/: build.gradle.kts
app/src/androidTest/java/com/gtc/rootbridgekotlin/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  scanner.cpp
app/src/main/java/com/gtc/rootbridgekotlin/: AppNavHost.kt  MainActivity.kt
app/src/main/java/com/gtc/rootbridgekotlin/core/: .gitkeep
app/src/main/java/com/gtc/rootbridgekotlin/core/memory/: MemoryEngine.kt  MemoryRegion.kt  ProcessInfo.kt  ProcessScanner.kt  ScanResult.kt
app/src/main/java/com/gtc/rootbridgekotlin/data/: .gitkeep
app/src/main/java/com/gtc/rootbridgekotlin/domain/: .gitkeep
app/src/main/java/com/gtc/rootbridgekotlin/overlay/: .gitkeep  OverlayPermissionManager.kt  OverlayService.kt
app/src/main/java/com/gtc/rootbridgekotlin/ui/: .gitkeep
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: font_certs.xml  strings.xml  themes.xml
app/src/test/java/com/gtc/rootbridgekotlin/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
